# veil

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
.ntm/: rate_limits.json
.ntm/pids/: cm-veil.pid
.ntm/summaries/: veil-20260329-151642.json  veil-20260329-181310.json
docs/: plan.md
src/: allowlist.rs  audit.rs  cli.rs  config.rs  evaluator.rs  extract.rs  hook.rs  hooks.rs  lib.rs  main.rs  operator.rs  render.rs  spine.rs  types.rs
src/packs/: mod.rs
tests/: allowlist.rs  doctor.rs
