[package]
name = "veil"
version = "0.1.0"
edition = "2024"
authors = ["CMD+RVL <engineering@cmdrvl.com>"]
description = "Data exfiltration guard for AI coding agents"
license = "MIT"
repository = "https://github.com/cmdrvl/veil"
readme = "README.md"
keywords = ["ai", "security", "hooks", "privacy", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "veil"
path = "src/main.rs"

[dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
